syntax = "proto3";

option go_package = "/magpiepb"; // 定义包名
option java_multiple_files = true;
option java_package = "com.github.magpie";
option java_outer_classname = "ClusterProto";

message RpcRequest {
  map<string, string> params = 1;
  string data = 2;
}

message Entry{
  uint64 index = 1;
  string data = 2;
  string team = 3;
  string address = 4;
  int32 port = 5;
  string timestamp = 6;
}

message RpcResponse {
  int32 code = 1;
  string message = 2;
  string data = 3;
}

//stream响应结构
message StreamResponse{
  string data = 1;
}

// 定义存储服务
service Storage {
  rpc Get(RpcRequest) returns (RpcResponse) {} // 根据Key或者Key前缀查看数据
  rpc Count(RpcRequest) returns (RpcResponse) {} // 查看键值对数量
}

// 定义元数据服务
service Meta {
  rpc CreateTable(RpcRequest) returns (RpcResponse) {} // 创建表
  rpc DeleteTable(RpcRequest) returns (RpcResponse) {} // 删除表
  rpc DescribeTable(RpcRequest) returns (RpcResponse) {} // 查看表结构信息
  rpc ListTables(RpcRequest) returns (RpcResponse) {} // 列出所有表格
}

// 定义日志服务
service Log {
  rpc apply(Entry) returns (RpcResponse) {} // 请求日志
}

//定义集群服务
service Cluster{
  rpc DataSync (RpcRequest) returns (stream StreamResponse){} // 服务端流式响应
  rpc ListMembers (RpcRequest) returns (RpcResponse){} // 列出集群所有成员信息
  rpc MemberStatus (RpcRequest) returns (RpcResponse){} // 查看集群成员状态信息
}
